[package]
name = "php-stacktrace"
version = "0.1.2"
authors = ["Oraoto <oraoto@outlook.com>"]
repository = "https://github.com/oraoto/php-stacktrace"
keywords = ["php", "debug", "stacktrace"]
readme = "Readme.md"
license = "MIT"
description = "Read stacktrace from outside PHP process"

[dependencies]
elf = "0.0.10"
regex = "1.1.0"
gimli = "0.16.1"
byteorder = "1.1.0"
read-process-memory = "0.1.2"
libc = "0.2.45"
clap = "2.32.0"
serde = "1.0.81"
serde_derive = "1.0.81"
serde_json = "1.0.33"
