[package]
name = "php-stacktrace"
version = "0.1.2"
authors = ["Oraoto <oraoto@outlook.com>"]
repository = "https://github.com/oraoto/php-stacktrace"
keywords = ["php", "debug", "stacktrace"]
readme = "Readme.md"
license = "MIT"
description = "Read stacktrace from outside PHP process"
edition = "2018"

[dependencies]
regex = "1.3.6"
read-process-memory = "0.1.2"
libc = "0.2.69"
clap = "2.33.0"
